--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,13 @@ pluginManagement {
         }
         maven { url = "https://maven.parchmentmc.org" }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
+        maven {
+            name = 'Azure'
+            url = 'https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1'
+            content {
+                includeGroup "dev.architectury"
+            }
+        }
     }
 }
 
